--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "leafeonwebsite",
+    "name": "uxiewebsite",
     "version": "1.0.0",
     "scripts": {
         "start": "node server.js"
@@ -7,6 +7,6 @@
     "dependencies": {
         "express": "^4.16.3"
     },
-    "author": "Oliver Kennewell",
+    "author": "Deshon Abraham",
     "license": "ISC"
 }
